# Path-Tracer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  save_ply.py  test.ply
ext/: CMakeLists.txt
include/pt/: aabb.h  accel.h  bdpt.h  bdpt2.h  bitmap.h  block.h  bvh.h  camera.h  color.h  common.h  filter.h  gui.h  integrator.h  light.h  lightselector.h  material.h  mesh.h  ray.h  sampler.h  scene.h  shape.h  tangent.h  timer.h  transform.h  vector.h
scenes/bathroom/: albedo.exr  bathroom.xml  normal.exr
scenes/cornell-box/: albedo.exr  cornell-box.xml  normal.exr
scenes/cornell-box-2/: cornell-box-2.xml
scenes/veach-mis/: albedo.exr  normal.exr
src/: aabb.cpp  accel.cpp  bdpt.cpp  bdpt2.cpp  bitmap.cpp  block.cpp  bvh.cpp  camera.cpp  common.cpp  gui.cpp  integrator.cpp  light.cpp  main.cpp  material.cpp  mesh.cpp  sampler.cpp  scene.cpp  shape.cpp  sobolmatrices.cpp
